<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".LoginActivity"
    android:onClick="hideKeyboard">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="70dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="211dp"
        android:layout_height="172dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="26dp"
        android:src="@drawable/logo"

        app:layout_constraintBottom_toTopOf="@+id/etUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="54dp"
        android:background="@android:color/white"
        android:hint="Username"
        android:inputType="textPersonName"
        android:padding="10dp"

        app:roundedCorners="true"
        app:bootstrapSize="lg"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView1" />


    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="54dp"
        android:background="@android:color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:bootstrapSize="lg"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        app:roundedCorners="true" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="68dp"

        android:layout_marginEnd="57dp"
        android:layout_marginBottom="312dp"

        android:backgroundTint="@color/buttonPrimary"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:bootstrapBrand="warning"
        app:bootstrapSize="lg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnLoginRegister"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword"
        app:layout_constraintVertical_bias="0.079"
        app:roundedCorners="true" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btnLoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="68dp"

        android:layout_marginEnd="55dp"
        android:layout_marginBottom="312dp"

        android:backgroundTint="@color/buttonPrimary"
        android:text="@string/register"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:bootstrapBrand="warning"
        app:bootstrapSize="lg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword"
        app:layout_constraintVertical_bias="0.079"
        app:roundedCorners="true" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btnMainApp"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_margin="5dp"

        android:layout_marginStart="233dp"

        android:layout_marginTop="132dp"
        android:layout_marginEnd="183dp"
        android:layout_marginBottom="12dp"
        android:text="Skip Login"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/buttonSecondary"
        app:bootstrapBrand="regular"
        app:bootstrapSize="lg"
        app:layout_constraintBottom_toTopOf="@+id/etLoginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.49"
        app:roundedCorners="true" />


</androidx.constraintlayout.widget.ConstraintLayout>