<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ListView
        android:id="@+id/tutor_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </ListView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/tutor_desc_txt"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".1"
        android:gravity="center"
        android:textStyle="bold"
        />

</LinearLayout>